Stop visible overflow of /me profile links

--- a/client/me/profile-link/style.scss
+++ b/client/me/profile-link/style.scss
@@ -55,6 +55,7 @@
 	line-height: 1.4;
 	overflow: hidden;
 	white-space: nowrap;
+	width: 100%;
 	text-decoration: none;
 
 	&:after {
